tests/fixtures/errors/circular_main.lox
import "self:circular_a.lox" as a;
